umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_formate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {:atoms ["C#h" "O#n2" "O#c-#n3"] :bonds [[0 1 :double] [0 2 :single]]}
    :success true
    :tie-breaks [0]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {0 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {:atoms ["C#h" "O#n2" "O#c-#n3"] :bonds [[0 1 :double] [0 2 :single]]}
    :success true
    :tie-breaks [0]}
  :counts-strict {:success false :tie-breaks [] :unresolved {0 ["C#u#v3#a!" "C#h#v3#a!"]}}}
