umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_formyl-chloride.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h#v3" "1" "O#n2#v2" "2" "Cl#n3#v"} :bonds [[0 1 "2"] [0 2 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h#v3" "1" "O#n2#v2" "2" "Cl#n3#v"} :bonds [[0 1 "2"] [0 2 "1"]] :charge 0 :spin "#u0 #s1"}}}
