umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_formyl-fluoride.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {:atoms ["C#h#v3" "O#n2#v2" "F#n3#v"] :bonds [[0 1 "2"] [0 2 "1"]]}
    :success true}
  :counts {
    :output {:atoms ["C#h#v3" "O#n2#v2" "F#n3#v"] :bonds [[0 1 "2"] [0 2 "1"]]}
    :success true}}
