umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_glyoxal.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h#v3" "O#n2#v2" "C#h#v3" "O#n2#v2"]
      :bonds [[0 1 :double] [0 2 :single] [2 3 :double]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h#v3" "O#n2#v2" "C#h#v3" "O#n2#v2"]
      :bonds [[0 1 :double] [0 2 :single] [2 3 :double]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
