umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_malic-acid.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms [
        "C#v4"
        "O#n2#v2"
        "O#h#n2#v"
        "C#h2#v2"
        "C#h#v3"
        "O#h#n2#v"
        "C#v4"
        "O#n2#v2"
        "O#h#n2#v"]
      :bonds [
        [0 1 :double]
        [0 2 :single]
        [0 3 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 7 :double]
        [6 8 :single]]}
    :success true}
  :counts {
    :output {
      :atoms [
        "C#v4"
        "O#n2#v2"
        "O#h#n2#v"
        "C#h2#v2"
        "C#h#v3"
        "O#h#n2#v"
        "C#v4"
        "O#n2#v2"
        "O#h#n2#v"]
      :bonds [
        [0 1 :double]
        [0 2 :single]
        [0 3 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 7 :double]
        [6 8 :single]]}
    :success true}}
