umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_malonic-acid.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#v4" "O#n2#v2" "O#h#n2#v" "C#h2#v2" "C#v4" "O#n2#v2" "O#h#n2#v"] :bonds [[0 1 "2"] [0 2 "1"] [0 3 "1"] [3 4 "1"] [4 5 "2"] [4 6 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#v4" "O#n2#v2" "O#h#n2#v" "C#h2#v2" "C#v4" "O#n2#v2" "O#h#n2#v"] :bonds [[0 1 "2"] [0 2 "1"] [0 3 "1"] [3 4 "1"] [4 5 "2"] [4 6 "1"]] :charge 0 :spin "#u0 #s1"}}}
